--- a/client.htm
+++ b/client.htm
@@ -274,16 +274,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-73013.htm" title="VUE元素的隐藏和显示（v-show指令)">VUE元素的隐藏和显示（v-show指令)</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-7-free-subscribe-node.htm" title="「3月7日」最高速度22.4M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「3月7日」最高速度22.4M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-86160.htm" title="浅谈分布式一致性协议之3PC">浅谈分布式一致性协议之3PC</a></li>
-                        <li class="py-2"><a href="/news/article-90927.htm" title="动物医院名字怎么取好听点的（动物医院名字怎么取好听点的呢）">动物医院名字怎么取好听点的（动物医院名字怎么取好听点的呢）</a></li>
-                        <li class="py-2"><a href="/news/article-71684.htm" title="纳尼！ROOT修改权限不足？提示Operation not permitted？">纳尼！ROOT修改权限不足？提示Operation not permitted？</a></li>
-                        <li class="py-2"><a href="/news/article-79102.htm" title="深圳市宠物领养之家官网电话 深圳市宠物领养之家官网电话号码">深圳市宠物领养之家官网电话 深圳市宠物领养之家官网电话号码</a></li>
-                        <li class="py-2"><a href="/news/article-69714.htm" title="领养狗狗协议书范本最新（犬只领养协议）">领养狗狗协议书范本最新（犬只领养协议）</a></li>
-                        <li class="py-2"><a href="/news/article-72343.htm" title="element中el-cascader的使用">element中el-cascader的使用</a></li>
-                        <li class="py-2"><a href="/news/article-89061.htm" title="常州宠物医院电话（常州市宠物医院电话）">常州宠物医院电话（常州市宠物医院电话）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-5-free-high-speed-nodes.htm" title="「3月5日」最高速度20.9M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接">「3月5日」最高速度20.9M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-67132.htm" title="JSON  传输数据出现415错误 Content type &#8216;application/xml;charset=UTF-8&#8217; not supported">JSON  传输数据出现415错误 Content type &#8216;application/xml;charset=UTF-8&#8217; not supported</a></li>
+                        <li class="py-2"><a href="/news/article-76392.htm" title="北京宠物医院价格表（北京宠物医院价格表图片）">北京宠物医院价格表（北京宠物医院价格表图片）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-11-node-share-links.htm" title="「4月11日」最高速度18.4M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接">「4月11日」最高速度18.4M/S，2025年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-75032.htm" title="北京免费领养猫咪中心（北京免费领养猫咪中心电话）">北京免费领养猫咪中心（北京免费领养猫咪中心电话）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-12-node-share.htm" title="「3月12日」最高速度18.6M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接">「3月12日」最高速度18.6M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-3-free-high-speed-nodes.htm" title="「4月3日」最高速度22.8M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「4月3日」最高速度22.8M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-71036.htm" title="广州哪里买狗狗好（广州哪里买狗最便宜）">广州哪里买狗狗好（广州哪里买狗最便宜）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-4-free-high-speed-nodes.htm" title="「4月4日」最高速度19.3M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接">「4月4日」最高速度19.3M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-10-free-node-subscribe-links.htm" title="「3月10日」最高速度18.6M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接">「3月10日」最高速度18.6M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-77071.htm" title="广州宠物市场搬去哪了（广州市十大宠物市场）">广州宠物市场搬去哪了（广州市十大宠物市场）</a></li>
                     </ul>
     </div>
 </div>
@@ -295,7 +295,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">39</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
