--- a/date/2025-03/page-5.htm
+++ b/date/2025-03/page-5.htm
@@ -249,16 +249,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-4-9-free-node-subscribe-links.htm" title="「4月9日」最高速度20M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「4月9日」最高速度20M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-3-free-v2ray.htm" title="「3月3日」最高速度20.9M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「3月3日」最高速度20.9M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-7-free-subscribe-node.htm" title="「3月7日」最高速度22.4M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「3月7日」最高速度22.4M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-81848.htm" title="开宠物店累不累人（一般开宠物店挣不挣）">开宠物店累不累人（一般开宠物店挣不挣）</a></li>
                         <li class="py-2"><a href="/news/article-79806.htm" title="宠物医院服务项目价格表（宠物医院服务项目价格表最新）">宠物医院服务项目价格表（宠物医院服务项目价格表最新）</a></li>
-                        <li class="py-2"><a href="/news/article-67133.htm" title="上海宠物领养救助站是真的吗（上海宠物领养机构）">上海宠物领养救助站是真的吗（上海宠物领养机构）</a></li>
+                        <li class="py-2"><a href="/news/article-82571.htm" title="java使用单循环链表解决约瑟夫问题">java使用单循环链表解决约瑟夫问题</a></li>
                         <li class="py-2"><a href="/news/article-84003.htm" title="猫粮所有品牌app下载大全（猫粮品牌十大排行知乎）">猫粮所有品牌app下载大全（猫粮品牌十大排行知乎）</a></li>
-                        <li class="py-2"><a href="/news/article-84718.htm" title="1970年农历4月27日（1970年农历4月27日阳历是多少）">1970年农历4月27日（1970年农历4月27日阳历是多少）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-30-free-node-subscribe.htm" title="「3月30日」最高速度21.8M/S，2025年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接">「3月30日」最高速度21.8M/S，2025年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-93483.htm" title="动物防疫站给猫打疫苗吗（动物防疫站给猫打针免费吗）">动物防疫站给猫打疫苗吗（动物防疫站给猫打针免费吗）</a></li>
+                        <li class="py-2"><a href="/news/article-73670.htm" title="pip 查看要安装的包所有版本（所有包版本）">pip 查看要安装的包所有版本（所有包版本）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-3-free-v2ray.htm" title="「3月3日」最高速度20.9M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「3月3日」最高速度20.9M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/news/article-79805.htm" title="宠物粮的种类大全（宠物粮go）">宠物粮的种类大全（宠物粮go）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-26-node-share.htm" title="「3月26日」最高速度22.2M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「3月26日」最高速度22.2M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-31-free-v2ray-subscribe.htm" title="「3月31日」最高速度21.3M/S，2025年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接">「3月31日」最高速度21.3M/S，2025年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-4-node-share-links.htm" title="「3月4日」最高速度23M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「3月4日」最高速度23M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -270,7 +270,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">39</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
