--- a/date/2025-03/page-8.htm
+++ b/date/2025-03/page-8.htm
@@ -249,16 +249,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-86159.htm" title="DecimalFormat保留小数位">DecimalFormat保留小数位</a></li>
-                        <li class="py-2"><a href="/news/article-67133.htm" title="上海宠物领养救助站是真的吗（上海宠物领养机构）">上海宠物领养救助站是真的吗（上海宠物领养机构）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-9-free-node-subscribe-links.htm" title="「3月9日」最高速度21.1M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接">「3月9日」最高速度21.1M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-19-node-share.htm" title="「3月19日」最高速度21.5M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接">「3月19日」最高速度21.5M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-13-free-v2ray.htm" title="「3月13日」最高速度21.4M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「3月13日」最高速度21.4M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/news/article-78429.htm" title="C/C++标准格式、输入输出及main函数的作用">C/C++标准格式、输入输出及main函数的作用</a></li>
-                        <li class="py-2"><a href="/news/article-72344.htm" title="动物疫苗公司招聘信息网 动物疫苗公司招聘信息网站">动物疫苗公司招聘信息网 动物疫苗公司招聘信息网站</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-14-node-share.htm" title="「3月14日」最高速度22.6M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接">「3月14日」最高速度22.6M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-78430.htm" title="养土狗的方法与技术有哪些视频讲解（养土狗技巧）">养土狗的方法与技术有哪些视频讲解（养土狗技巧）</a></li>
-                        <li class="py-2"><a href="/news/article-86160.htm" title="浅谈分布式一致性协议之3PC">浅谈分布式一致性协议之3PC</a></li>
-                        <li class="py-2"><a href="/news/article-80474.htm" title="springcloud解决使用feign调用服务 header参数传递的问题">springcloud解决使用feign调用服务 header参数传递的问题</a></li>
-                        <li class="py-2"><a href="/news/article-77071.htm" title="广州宠物市场搬去哪了（广州市十大宠物市场）">广州宠物市场搬去哪了（广州市十大宠物市场）</a></li>
+                        <li class="py-2"><a href="/news/article-77747.htm" title="上海宠物医院有多少家分院啊（上海宠物医院知乎）">上海宠物医院有多少家分院啊（上海宠物医院知乎）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-16-free-node-subscribe.htm" title="「3月16日」最高速度19.8M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「3月16日」最高速度19.8M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-69715.htm" title="哪里有免费给狗狗打疫苗的地方重庆（重庆哪里可以免费给狗狗打狂犬疫苗）">哪里有免费给狗狗打疫苗的地方重庆（重庆哪里可以免费给狗狗打狂犬疫苗）</a></li>
+                        <li class="py-2"><a href="/news/article-84718.htm" title="1970年农历4月27日（1970年农历4月27日阳历是多少）">1970年农历4月27日（1970年农历4月27日阳历是多少）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-2-node-share-links.htm" title="「4月2日」最高速度22.8M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接">「4月2日」最高速度22.8M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-9-free-node-subscribe-links.htm" title="「4月9日」最高速度20M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「4月9日」最高速度20M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-3-free-v2ray.htm" title="「3月3日」最高速度20.9M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「3月3日」最高速度20.9M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -270,7 +270,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">39</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
