--- a/free-nodes/2025-4-8-free-high-speed-nodes.htm
+++ b/free-nodes/2025-4-8-free-high-speed-nodes.htm
@@ -159,16 +159,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-65900.htm" title="将Spring Boot 项目打包成Jar包并部署到Nginx服务器中">将Spring Boot 项目打包成Jar包并部署到Nginx服务器中</a></li>
-                        <li class="py-2"><a href="/news/article-75695.htm" title="合肥哪里有领养猫狗的地方 合肥有领养猫的地方吗">合肥哪里有领养猫狗的地方 合肥有领养猫的地方吗</a></li>
-                        <li class="py-2"><a href="/news/article-72343.htm" title="element中el-cascader的使用">element中el-cascader的使用</a></li>
-                        <li class="py-2"><a href="/news/article-92021.htm" title="成都狗狗宠物领养中心（成都狗狗领养中心官网）">成都狗狗宠物领养中心（成都狗狗领养中心官网）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-5-free-high-speed-nodes.htm" title="「3月5日」最高速度20.9M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接">「3月5日」最高速度20.9M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-87572.htm" title="动物注射疫苗注射哪里最好（动物疫苗注射注意事项）">动物注射疫苗注射哪里最好（动物疫苗注射注意事项）</a></li>
+                        <li class="py-2"><a href="/news/article-77070.htm" title="Centos7系统离线安装nginx步骤(亲测，超详细步骤)">Centos7系统离线安装nginx步骤(亲测，超详细步骤)</a></li>
+                        <li class="py-2"><a href="/news/article-84718.htm" title="1970年农历4月27日（1970年农历4月27日阳历是多少）">1970年农历4月27日（1970年农历4月27日阳历是多少）</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-3-19-node-share.htm" title="「3月19日」最高速度21.5M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接">「3月19日」最高速度21.5M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-71035.htm" title="宠物粮生产设备（宠物粮生产设备哪家好）">宠物粮生产设备（宠物粮生产设备哪家好）</a></li>
-                        <li class="py-2"><a href="/news/article-85430.htm" title="restTemplate配置及使用">restTemplate配置及使用</a></li>
-                        <li class="py-2"><a href="/news/article-76391.htm" title="动物疫苗种类及类型分类图解（动物疫苗的种类）">动物疫苗种类及类型分类图解（动物疫苗的种类）</a></li>
+                        <li class="py-2"><a href="/news/article-81848.htm" title="开宠物店累不累人（一般开宠物店挣不挣）">开宠物店累不累人（一般开宠物店挣不挣）</a></li>
+                        <li class="py-2"><a href="/news/article-72343.htm" title="element中el-cascader的使用">element中el-cascader的使用</a></li>
+                        <li class="py-2"><a href="/news/article-80475.htm" title="FP-growth算法以及代码实现">FP-growth算法以及代码实现</a></li>
+                        <li class="py-2"><a href="/news/article-76392.htm" title="北京宠物医院价格表（北京宠物医院价格表图片）">北京宠物医院价格表（北京宠物医院价格表图片）</a></li>
+                        <li class="py-2"><a href="/news/article-75031.htm" title="免费领养狗狗正规网站平台有哪些呢图片（免费领养狗狗）">免费领养狗狗正规网站平台有哪些呢图片（免费领养狗狗）</a></li>
+                        <li class="py-2"><a href="/news/article-77746.htm" title="ES 文档与索引介绍">ES 文档与索引介绍</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-1-node-share-links.htm" title="「4月1日」最高速度21.1M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「4月1日」最高速度21.1M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -180,7 +180,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
