--- a/free-nodes/page-2.htm
+++ b/free-nodes/page-2.htm
@@ -106,6 +106,58 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row item xcblog-blog-item" data-date="2025-04-03">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-4-3-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/1be7898f0d880e324373dcd218a1d0f4.webp" alt="「4月3日」最高速度22.8M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-4-3-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月3日」最高速度22.8M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了加拿大、新加坡、韩国、香港、日本、欧洲、美国等地区,最高速度可达22.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-04-02">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-4-2-node-share-links.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/d21208fec1e7d0709067a1f22cc3ab5b.webp" alt="「4月2日」最高速度22.8M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-4-2-node-share-links.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月2日」最高速度22.8M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了韩国、香港、欧洲、美国、日本、加拿大、新加坡等地区,最高速度可达22.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-04-01">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-4-1-node-share-links.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/d21208fec1e7d0709067a1f22cc3ab5b.webp" alt="「4月1日」最高速度21.1M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-4-1-node-share-links.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「4月1日」最高速度21.1M/S，2025年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了日本、欧洲、新加坡、美国、韩国、加拿大、香港等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-03-31">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-3-31-free-v2ray-subscribe.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/cc523ed9277a0375a6331d5674ef34dc.webp" alt="「3月31日」最高速度21.3M/S，2025年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-3-31-free-v2ray-subscribe.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「3月31日」最高速度21.3M/S，2025年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了韩国、新加坡、香港、欧洲、美国、加拿大、日本等地区,最高速度可达21.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
                                                         <div class="row item xcblog-blog-item" data-date="2025-03-30">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2025-3-30-free-node-subscribe.htm" class="xcblog-blog-url">
@@ -184,60 +236,8 @@
                                     <p>这一次的节点更新覆盖了新加坡、美国、韩国、香港、日本、欧洲、加拿大等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                                 </div>
                             </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-03-24">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-3-24-node-share-links.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/23719af02f410bf11c49229669ae7202.webp" alt="「3月24日」最高速度21.9M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-3-24-node-share-links.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「3月24日」最高速度21.9M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了美国、日本、香港、加拿大、新加坡、韩国、欧洲等地区,最高速度可达21.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-03-23">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-3-23-free-v2ray.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/ba2d5a03aaf72b56501b25c1e174249b.webp" alt="「3月23日」最高速度21M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-3-23-free-v2ray.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「3月23日」最高速度21M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了香港、美国、韩国、欧洲、新加坡、加拿大、日本等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-03-22">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-3-22-node-share.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/ba2d5a03aaf72b56501b25c1e174249b.webp" alt="「3月22日」最高速度21M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-3-22-node-share.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「3月22日」最高速度21M/S，2025年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了香港、美国、韩国、加拿大、日本、欧洲、新加坡等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-03-21">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-3-21-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/23719af02f410bf11c49229669ae7202.webp" alt="「3月21日」最高速度20.2M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-3-21-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「3月21日」最高速度20.2M/S，2025年Clash/Shadowrocket/V2ray/SSR每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了香港、欧洲、美国、日本、新加坡、韩国、加拿大等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
                             
-                            <ul class="pagination"><li><a href="/free-nodes/">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li class="active"><span>2</span></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li> <li><a href="/free-nodes/page-3.htm">&raquo;</a></li></ul>                        </div>
+                            <ul class="pagination"><li><a href="/free-nodes/">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li class="active"><span>2</span></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li> <li><a href="/free-nodes/page-3.htm">&raquo;</a></li></ul>                        </div>
                     </div>
                     <div class="col-md-3">
                         <div class="panel panel-default">
@@ -246,16 +246,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-4-8-free-high-speed-nodes.htm" title="「4月8日」最高速度19.6M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接">「4月8日」最高速度19.6M/S，2025年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-84718.htm" title="1970年农历4月27日（1970年农历4月27日阳历是多少）">1970年农历4月27日（1970年农历4月27日阳历是多少）</a></li>
-                        <li class="py-2"><a href="/news/article-88311.htm" title="动物疫苗注射工作注意事项有哪些（动物疫苗注射工作注意事项有哪些要求）">动物疫苗注射工作注意事项有哪些（动物疫苗注射工作注意事项有哪些要求）</a></li>
-                        <li class="py-2"><a href="/news/article-67777.htm" title="合肥宠物领养中心官网地址 合肥宠物领养中心官网地址查询">合肥宠物领养中心官网地址 合肥宠物领养中心官网地址查询</a></li>
-                        <li class="py-2"><a href="/news/article-73012.htm" title="VUE3开发问题总结(数据更新和页面显示问题)">VUE3开发问题总结(数据更新和页面显示问题)</a></li>
-                        <li class="py-2"><a href="/news/article-73670.htm" title="pip 查看要安装的包所有版本（所有包版本）">pip 查看要安装的包所有版本（所有包版本）</a></li>
-                        <li class="py-2"><a href="/news/article-82572.htm" title="C# 一维数组如何快速实现数组元素的数据类型的转换">C# 一维数组如何快速实现数组元素的数据类型的转换</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-7-free-subscribe-node.htm" title="「3月7日」最高速度22.4M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「3月7日」最高速度22.4M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-89061.htm" title="常州宠物医院电话（常州市宠物医院电话）">常州宠物医院电话（常州市宠物医院电话）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-28-free-node-subscribe-links.htm" title="「3月28日」最高速度22.3M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接">「3月28日」最高速度22.3M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-66499.htm" title="免费领养宠物狗的平台有哪些（免费领养宠物狗的官网）">免费领养宠物狗的平台有哪些（免费领养宠物狗的官网）</a></li>
+                        <li class="py-2"><a href="/news/article-70349.htm" title="宠物领养协议书范本模板图片下载 宠物领养协议书范本模板图片下载大全">宠物领养协议书范本模板图片下载 宠物领养协议书范本模板图片下载大全</a></li>
+                        <li class="py-2"><a href="/news/article-78429.htm" title="C/C++标准格式、输入输出及main函数的作用">C/C++标准格式、输入输出及main函数的作用</a></li>
+                        <li class="py-2"><a href="/news/article-88310.htm" title="【Java分享客栈】一文搞定京东零售开源的AsyncTool，彻底解决异步编排问题">【Java分享客栈】一文搞定京东零售开源的AsyncTool，彻底解决异步编排问题</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-19-node-share.htm" title="「3月19日」最高速度21.5M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接">「3月19日」最高速度21.5M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-93995.htm" title="狗粮生产机器设备哪个品牌好些（狗粮生产机器设备哪个品牌好些呢）">狗粮生产机器设备哪个品牌好些（狗粮生产机器设备哪个品牌好些呢）</a></li>
+                        <li class="py-2"><a href="/news/article-69714.htm" title="领养狗狗协议书范本最新（犬只领养协议）">领养狗狗协议书范本最新（犬只领养协议）</a></li>
+                        <li class="py-2"><a href="/news/article-81214.htm" title="宠物粮食在哪里进货好卖（宠物粮食批发进货渠道）">宠物粮食在哪里进货好卖（宠物粮食批发进货渠道）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-26-node-share.htm" title="「3月26日」最高速度22.2M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「3月26日」最高速度22.2M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-9-free-node-subscribe-links.htm" title="「3月9日」最高速度21.1M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接">「3月9日」最高速度21.1M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -267,7 +267,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">39</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
