--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -438,82 +438,7 @@
                             <hr />
                                                         <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <a href="javascript:;" class="js_to" data-url="https://kkjiasu.top/#/register?code=" data-type="KKjiasu" data-code="Jgf8FsxV" target="_blank"><b>KK加速</b></a>
-                                </div>
-                                <div class="panel-body">
-                                    
-                                    <dl>
-                                        <dt>资费</dt>
-                                                                                <dd>
-                                            <p>
-                                                <label>Pro | 不限时：</label> ¥68.00 /一次性。 
-                                                                                                不限时200G高速流量; 
-                                                                                                不限速，畅享极速网络; 
-                                                                                                仅限个人使用（不限制设备）; 
-                                                                                                全球 BGP+内网跨境专线; 
-                                                                                                支持Netflix等流媒体服务; 
-                                                                                                售后 24*7在线客服为您售后; 
-                                                                                                不记录任何网络日志，放心使用！; 
-                                                                                            </p>
-                                        </dd>
-                                                                                <dd>
-                                            <p>
-                                                <label>Air | 不限时：</label> ¥38.00 /一次性。 
-                                                                                                不限时100G高速流量; 
-                                                                                                不限速，畅享极速网络; 
-                                                                                                仅限个人使用（不限制设备）; 
-                                                                                                全球 BGP+内网跨境专线; 
-                                                                                                支持Netflix等流媒体服务; 
-                                                                                                售后 24*7在线客服为您售后; 
-                                                                                                不记录任何网络日志，放心使用！; 
-                                                                                            </p>
-                                        </dd>
-                                                                                <dd>
-                                            <p>
-                                                <label>专业级：</label> ¥18.00 /每月。 
-                                                                                                每月500G高速流量; 
-                                                                                                1Gbps带宽，畅享极速网络; 
-                                                                                                仅限小团体使用（不限制设备）; 
-                                                                                                全球 BGP+内网跨境专线; 
-                                                                                                支持Netflix等流媒体服务; 
-                                                                                                售后 24*7在线客服为您售后; 
-                                                                                                不记录任何网络日志，放心使用！; 
-                                                                                            </p>
-                                        </dd>
-                                                                                <dd>
-                                            <p>
-                                                <label>体验级：</label> ¥8.00 /每月。 
-                                                                                                每月168G高速流量; 
-                                                                                                300Mbps带宽，畅享极速网络; 
-                                                                                                仅限个人使用（不限制设备）; 
-                                                                                                全球 BGP+内网跨境专线; 
-                                                                                                支持Netflix等流媒体服务; 
-                                                                                                售后 24*7在线客服为您售后; 
-                                                                                                不记录任何网络日志，放心使用！; 
-                                                                                            </p>
-                                        </dd>
-                                                                                <dd>
-                                            <p>
-                                                <label>体验级：</label> ¥8.00 /每月。 
-                                                                                                每月168G高速流量; 
-                                                                                                300Mbps带宽，畅享极速网络; 
-                                                                                                仅限个人使用（不限制设备）; 
-                                                                                                全球 BGP+内网跨境专线; 
-                                                                                                支持Netflix等流媒体服务; 
-                                                                                                售后 24*7在线客服为您售后; 
-                                                                                                不记录任何网络日志，放心使用！; 
-                                                                                            </p>
-                                        </dd>
-                                                                            </dl>
-                                </div>
-                                <div class="panel-footer">
-                                    <a href="javascript:;" class="js_to" data-url="https://kkjiasu.top/#/register?code=" data-type="KKjiasu" data-code="Jgf8FsxV" target="_blank">点击查看</a>
-                                </div>
-                            </div>
-                            <hr />
-                                                        <div class="panel panel-default">
-                                <div class="panel-heading">
-                                    <a href="javascript:;" class="js_to" data-url="https://eded.keley02.top/#/login?code=" data-type="Keleyun" data-code="2gL62wdk" target="_blank"><b>可乐云</b></a>
+                                    <a href="javascript:;" class="js_to" data-url="https://q0av6w.klwiuehge.top/#/login?code=" data-type="Keleyun" data-code="2gL62wdk" target="_blank"><b>可乐云</b></a>
                                 </div>
                                 <div class="panel-body">
                                     
@@ -555,7 +480,7 @@
                                                                             </dl>
                                 </div>
                                 <div class="panel-footer">
-                                    <a href="javascript:;" class="js_to" data-url="https://eded.keley02.top/#/login?code=" data-type="Keleyun" data-code="2gL62wdk" target="_blank">点击查看</a>
+                                    <a href="javascript:;" class="js_to" data-url="https://q0av6w.klwiuehge.top/#/login?code=" data-type="Keleyun" data-code="2gL62wdk" target="_blank">点击查看</a>
                                 </div>
                             </div>
                             <hr />
@@ -622,16 +547,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-67777.htm" title="合肥宠物领养中心官网地址 合肥宠物领养中心官网地址查询">合肥宠物领养中心官网地址 合肥宠物领养中心官网地址查询</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-19-node-share.htm" title="「3月19日」最高速度21.5M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接">「3月19日」最高速度21.5M/S，2025年Clash/V2ray/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-92732.htm" title="动物疫苗接种时间表图片大全 动物疫苗接种时间表图片大全集">动物疫苗接种时间表图片大全 动物疫苗接种时间表图片大全集</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-8-clash-v2ray-ss-ssr.htm" title="「3月8日」最高速度21M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「3月8日」最高速度21M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-3-free-high-speed-nodes.htm" title="「4月3日」最高速度22.8M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「4月3日」最高速度22.8M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-93483.htm" title="动物防疫站给猫打疫苗吗（动物防疫站给猫打针免费吗）">动物防疫站给猫打疫苗吗（动物防疫站给猫打针免费吗）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-11-node-share.htm" title="「3月11日」最高速度21.8M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接">「3月11日」最高速度21.8M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/news/article-68413.htm" title="狗粮10大品牌排行榜（狗粮品牌前十名）">狗粮10大品牌排行榜（狗粮品牌前十名）</a></li>
-                        <li class="py-2"><a href="/news/article-89763.htm" title="三国杀武将登场特效是什么样子的（三国杀武将限定技）">三国杀武将登场特效是什么样子的（三国杀武将限定技）</a></li>
-                        <li class="py-2"><a href="/news/article-89061.htm" title="常州宠物医院电话（常州市宠物医院电话）">常州宠物医院电话（常州市宠物医院电话）</a></li>
-                        <li class="py-2"><a href="/news/article-76392.htm" title="北京宠物医院价格表（北京宠物医院价格表图片）">北京宠物医院价格表（北京宠物医院价格表图片）</a></li>
-                        <li class="py-2"><a href="/news/article-72343.htm" title="element中el-cascader的使用">element中el-cascader的使用</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-2-node-share-links.htm" title="「4月2日」最高速度22.8M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接">「4月2日」最高速度22.8M/S，2025年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-77747.htm" title="上海宠物医院有多少家分院啊（上海宠物医院知乎）">上海宠物医院有多少家分院啊（上海宠物医院知乎）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-28-free-node-subscribe-links.htm" title="「3月28日」最高速度22.3M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接">「3月28日」最高速度22.3M/S，2025年Shadowrocket/Clash/SSR/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-10-free-node-subscribe-links.htm" title="「3月10日」最高速度18.6M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接">「3月10日」最高速度18.6M/S，2025年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-3-4-node-share-links.htm" title="「3月4日」最高速度23M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「3月4日」最高速度23M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-81214.htm" title="宠物粮食在哪里进货好卖（宠物粮食批发进货渠道）">宠物粮食在哪里进货好卖（宠物粮食批发进货渠道）</a></li>
                     </ul>
     </div>
 </div>
@@ -643,7 +568,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">39</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
